--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "homepage": "https://eagle.rctech.club",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "apollo-boost": "^0.4.7",
+    "apollo-cache-persist": "^0.1.1",
+    "graphql": "^14.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
